--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,6 @@ background-color:red;
   bottom: 100px;
   top: 100px;
   right: 0px;
-  border: solid 1px;
   padding-top: 10px;
   padding-left: 10px;
   overflow:scroll;
@@ -63,17 +62,23 @@ img{
 
 button{
   top: 100px;
+  right: 15px;
+  left: 15px;
+  width: 70px;
   
 }
 
-h1{
+h2{
   text-align: right;
   padding-right: 100px;
   font-family: 'Open Sans', sans-serif;
+  vertical-align: middle;
+
 }
 
-.div5 h1{
+.div5 h2{
   text-align:center;
-  
+  vertical-align: middle;
+
   font-family: 'Open Sans', sans-serif;
 }
